<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">权限框架演示</string>
    
    <!-- 主页面 -->
    <string name="main_title">Android权限请求框架演示</string>
    <string name="btn_camera_demo">相机权限演示</string>
    <string name="btn_location_demo">位置权限演示</string>
    <string name="btn_multiple_demo">Kotlin协程演示</string>
    <string name="btn_java_demo">Java调用演示</string>
    
    <!-- 相机页面 -->
    <string name="camera_title">相机权限演示</string>
    <string name="btn_request_camera">请求相机权限</string>
    <string name="btn_take_photo">拍照</string>
    <string name="camera_permission_rationale">需要相机权限来拍照和录制视频</string>
    <string name="camera_permission_denied">相机权限被拒绝，无法使用相机功能</string>
    <string name="camera_permission_permanently_denied">相机权限被永久拒绝，请到设置页面手动开启</string>
    
    <!-- 位置页面 -->
    <string name="location_title">位置权限演示</string>
    <string name="btn_request_location">请求位置权限</string>
    <string name="btn_get_location">获取位置</string>
    <string name="location_permission_rationale">需要位置权限来获取您的当前位置</string>
    <string name="location_permission_denied">位置权限被拒绝，无法获取位置信息</string>
    
    <!-- 通用 -->
    <string name="permission_granted">权限已授权</string>
    <string name="permission_denied">权限被拒绝</string>
    <string name="permission_permanently_denied">权限被永久拒绝</string>
    <string name="go_to_settings">去设置</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
</resources>